# py-tech-roles-library

./: .gitignore  CHANGELOG.md  Dockerfile.site  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CNAME
docs/plans/: 2026-07-19-tech-roles-library-design.md
notebooks/: tech_roles_library_demo.ipynb
site/: index.html  nginx.conf  robots.txt
src/tech_roles_library/: __init__.py  database.py  exceptions.py  export.py  models.py  queries.py  search.py
src/tech_roles_library/data/: role_names.json
src/tech_roles_library/data/en/: accessibility-specialist.json  agile-coach.json  ai-agent-engineer.json  ai-engineer.json  ai-ethics-governance-specialist.json  ai-product-manager.json  ai-research-engineer.json  ai-researcher.json  ai-safety-engineer.json  analytics-engineer.json  api-developer.json  application-security-engineer.json  automation-engineer.json  automl-engineer.json  backend-developer.json  blockchain-developer.json  business-intelligence-specialist.json  cloud-architect.json  cloud-engineer.json  cloud-security-engineer.json  compiler-engineer.json  computer-vision-engineer.json  content-designer.json  conversational-ai-engineer.json  customer-success-engineer.json  data-analyst.json  data-architect.json  data-engineer.json  data-governance-specialist.json  data-platform-engineer.json  data-product-manager.json  data-quality-engineer.json  data-scientist.json  data-visualization-specialist.json  database-administrator.json  dataops-engineer.json  delivery-manager.json  developer-advocate.json  developer-experience-engineer.json  devops-engineer.json  (+59 more)
src/tech_roles_library/data/es/: accessibility-specialist.json  agile-coach.json  ai-agent-engineer.json  ai-engineer.json  ai-ethics-governance-specialist.json  ai-product-manager.json  ai-research-engineer.json  ai-researcher.json  ai-safety-engineer.json  analytics-engineer.json  api-developer.json  application-security-engineer.json  automation-engineer.json  automl-engineer.json  backend-developer.json  blockchain-developer.json  business-intelligence-specialist.json  cloud-architect.json  cloud-engineer.json  cloud-security-engineer.json  compiler-engineer.json  computer-vision-engineer.json  content-designer.json  conversational-ai-engineer.json  customer-success-engineer.json  data-analyst.json  data-architect.json  data-engineer.json  data-governance-specialist.json  data-platform-engineer.json  data-product-manager.json  data-quality-engineer.json  data-scientist.json  (+66 more)
tests/: conftest.py  test_data_integrity.py  test_database.py  test_queries.py  test_search_export.py
